<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StudentActivity.MainActivity"
   android:background="@drawable/login">

   <ScrollView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:scrollbars="vertical"
       android:layout_marginTop="@dimen/_220sdp">

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          >

 <EditText
    android:id="@+id/et_email_sigin"
    android:layout_width="@dimen/_306sdp"
    android:layout_height="@dimen/_44sdp"
    android:background="@drawable/shape_email_sigin"
    android:layout_centerHorizontal="true"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:layout_marginTop="@dimen/_45sdp"
    android:hint="@string/email_signIn"
    android:padding="@dimen/_10sdp"
    android:textAlignment="center"
    android:inputType="textEmailAddress"
    android:textColorHint="#EFF1F6"
    android:textStyle="bold"
    android:textColor="#B9BBC1"
    android:textSize="@dimen/_15ssp"
    />
   <EditText
       android:id="@+id/et_password_sigin"
       android:layout_width="@dimen/_306sdp"
       android:layout_height="@dimen/_45sdp"
       android:background="@drawable/shape_email_sigin"
       android:layout_below="@+id/et_email_sigin"
       android:layout_centerHorizontal="true"
       android:layout_marginStart="@dimen/_20sdp"
       android:layout_marginEnd="@dimen/_20sdp"
       android:layout_marginTop="@dimen/_30sdp"
       android:inputType="textPassword"
       android:hint="@string/password_signIn"
       android:padding="@dimen/_10sdp"
       android:textAlignment="center"
       android:textColorHint="#EFF1F6"
       android:textStyle="bold"
       android:textColor="#B9BBC1"
       android:textSize="@dimen/_15ssp"
       />
          <CheckBox
              android:id="@+id/check_showPassword"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="Show password"
              android:layout_below="@+id/et_password_sigin"
              android:textSize="@dimen/_14ssp"
              android:textStyle="bold"
              android:textAlignment="viewEnd"
              android:layout_alignParentEnd="true"
              android:padding="@dimen/_5sdp"
              android:layout_margin="@dimen/_8sdp"
              />
   <Button
       android:id="@+id/btn_sigin"
       android:layout_width="@dimen/_150sdp"
       android:layout_height="@dimen/_36sdp"
       android:layout_centerHorizontal="true"
       android:textSize="@dimen/_14ssp"
       android:layout_marginTop="@dimen/_25sdp"
       android:text="@string/signIn"
       android:textAllCaps="false"
       android:textColor="@android:color/white"
       android:background="@drawable/shape_button_sigin"
       android:layout_below="@+id/check_showPassword"/>

          <TextView
              android:id="@+id/tv_forgetPassword_signIn"
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:layout_below="@+id/btn_sigin"
              android:layout_marginStart="@dimen/_8sdp"
              android:layout_marginTop="26dp"
              android:layout_marginBottom="@dimen/_20sdp"
              android:gravity="center"
              android:text="@string/forgetPassword"
              android:textColor="#212A6B"
              android:textSize="@dimen/_12ssp"
              android:textStyle="bold" />

          <TextView
             android:id="@+id/tv_donthaveaccount_signin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/_20sdp"
             android:layout_marginStart="@dimen/_40sdp"
             android:text="@string/Donthaveanaccount"
             android:layout_below="@+id/tv_forgetPassword_signIn"
             android:textSize="@dimen/_14ssp"
             android:textColor="#212A6B"
             android:textStyle="bold"
             />

      </RelativeLayout>
   </ScrollView>

</RelativeLayout>