<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.StudentActivity.MainActivity"
    android:background="@drawable/login">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_marginTop="@dimen/_220sdp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/et_email_sigin_Doctor"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_44sdp"
                android:background="@drawable/shape_email_sigin"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:hint="@string/phoneNunber"
                android:textAlignment="center"
                android:inputType="number"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_15ssp"
                />
            <EditText
                android:id="@+id/et_password_sigin_Doctor"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_45sdp"
                android:background="@drawable/shape_email_sigin"
                android:layout_below="@+id/et_email_sigin_Doctor"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:inputType="textPassword"
                android:hint="@string/password_signIn"
                android:textAlignment="center"
                android:textColorHint="@android:color/darker_gray"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/_15ssp"
                />

            <Button
                android:id="@+id/btn_sigin_Docotr"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_centerHorizontal="true"
                android:textSize="@dimen/_14ssp"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/signIn"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:background="@drawable/shape_button_sigin"
                android:layout_below="@+id/et_password_sigin_Doctor"/>



        </RelativeLayout>
    </ScrollView>

</RelativeLayout>