<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.StudentActivity.RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolpar_rgister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        app:titleTextColor="@android:color/black"
        app:subtitleTextColor="@android:color/black"
        />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:layout_below="@+id/toolpar_rgister">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_fullName_register"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_email_sigin"
                android:hint="@string/FullName"
                android:padding="@dimen/_3sdp"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_code_register"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_below="@+id/et_fullName_register"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_email_sigin"
                android:hint="@string/code"
                android:padding="@dimen/_3sdp"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:inputType="number"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linera1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_code_register"
                android:orientation="horizontal"
                android:weightSum="4"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                >
            <TextView
                android:id="@+id/et_unifersty_register"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="choose University"
                android:padding="@dimen/_3sdp"
                android:layout_weight="2"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/register_spinner1"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="2"
                android:gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:spinnerMode="dropdown"
                android:background="@drawable/ic_dropdown"
                android:backgroundTint="#716D6D"
                />
            </LinearLayout>
            <EditText
                android:id="@+id/et_email_register"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_below="@+id/linera1"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_email_sigin"
                android:hint="@string/email_signIn"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_3sdp"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/linera2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email_register"
                android:orientation="horizontal"
                android:weightSum="4"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                >
            <TextView
                android:id="@+id/et_faculty_register"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email_register"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/faculty"
                android:padding="@dimen/_3sdp"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:layout_weight="3"
                android:textStyle="bold" />
                <Spinner
                    android:id="@+id/register_spinner2"
                    android:layout_width="@dimen/_40sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:gravity="center"
                    android:background="@drawable/ic_dropdown"
                    android:spinnerMode="dropdown"
                    android:backgroundTint="#716D6D"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linera3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linera2"
                android:orientation="horizontal"
                android:weightSum="4"
                android:gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                >
            <TextView
                android:id="@+id/et_departMent_register"
                android:layout_width="@dimen/_170sdp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:text="@string/department"
                android:padding="@dimen/_5sdp"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:layout_weight="3"
                android:textColor="#716D6D"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />
            <Spinner
                android:id="@+id/register_spinner3"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_8sdp"
                android:gravity="center"
                android:spinnerMode="dropdown"
                android:background="@drawable/ic_dropdown"
                android:backgroundTint="#716D6D"
                />
            </LinearLayout>
            <EditText
                android:id="@+id/et_phoneNumber_register"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_below="@+id/linera3"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_email_sigin"
                android:hint="@string/phoneNunber"
                android:padding="@dimen/_3sdp"
                android:inputType="phone"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password_register"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_below="@+id/et_phoneNumber_register"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_email_sigin"
                android:hint="@string/password"
                android:padding="@dimen/_3sdp"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_8sdp"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_showPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Show password"
                android:layout_below="@+id/et_password_register"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:textAlignment="viewEnd"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_5sdp"
                android:layout_margin="@dimen/_8sdp"
                />

            <EditText
                android:id="@+id/et_confirm_password_register"
                android:layout_width="@dimen/_306sdp"
                android:layout_height="@dimen/_36sdp"
                android:layout_below="@+id/check_showPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_email_sigin"
                android:hint="@string/confirmPassword"
                android:padding="@dimen/_3sdp"
                android:paddingStart="@dimen/_8sdp"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColor="#716D6D"
                android:textColorHint="#8F8F8F"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/et_confirm_password_register"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/shape_button_sigin"
                android:text="@string/signUp"
                android:textAllCaps="false"
                android:textSize="@dimen/_14ssp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="@dimen/_15sdp"/>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>